--- a/contact.css
+++ b/contact.css
@@ -4,19 +4,17 @@
     overflow:inherit;
 }
 body{
-    background-color: rgb(227, 233, 233);
+    background-color: white;
 }
 
 /* styling header content */
 nav{
-    
     color: rgba(105, 107, 109, 0.884);
     margin-left: 40%;
     font-size:16px;
-    
 }
 nav img{
-    margin-top: 8%;
+    margin-top: 12%;
     width: 150px;
     height: 30px;
     padding-left: 100px;
@@ -24,13 +22,6 @@ nav img{
 }
 
 
-
-/* section leftside content */
-.leftside{
-    height: 480px;
-    background-color: white;
-
-}
 
 /* section leftside content */
 
@@ -58,7 +49,7 @@ nav img{
 
 }
 #icons li{
-    padding: 1% .5% 0% 1%;
+    padding: 10px 5px 0px 10px;
     font-size: smaller;
     
 }
@@ -69,15 +60,14 @@ nav img{
 #lefticons{
     margin-left: 60%;
     color:rgb(41, 41, 216);
-    margin-top:.4% ;
+    margin-top:5px ;
 }
-
 #faq{
     color:rgb(41, 161, 216);
-    margin-top:.4% ;
+    margin-top:5px ;
 }
 #phone{
-    margin-top: .4%;
+    margin-top: 5px;
     color: rgb(41, 41, 216);
 
 }
@@ -91,166 +81,87 @@ nav img{
     margin-top: .5%;
 }
 
-#simple{
-    background-image: url(1707937506608.jfif);
-    height: 440px;
-    font-size: 30px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-#simp-prag{
-    padding-top: 150px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#putton{
-    background-color: rgb(243, 98, 46);
-    border-radius: 10px;
-    font-size: 10px;
-    width: 100px;
-    margin-left: 45%;
-    padding: .4%;
-    margin-top: 1%;
-    font-weight:bolder;
-}
 
-
-/* styling the medsection  */
-.midsection{
-    height: 840px;
-    padding-top: 50px;
-    background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/* ul styling */
-#a{
-    list-style: none;
-    display: flex;
-    text-align: center;
-    color: rgb(141, 141, 137);
-}
-#a li{
-    margin-top: 3%;
-    margin-left: 16%;
-}
-#midfirspragraph{
-    margin-left: 42%;
-    font-weight:bold;
-    font-size: x-large;
-    font-family: fantasy;
-}
-#a .material-icons{
-    font-size: 50px;
-    color:rgb(42, 107, 228);
-}
-#a1{
-    color: black;
-}
-/* grilimg */
-.midsection img{
-    padding-top: 8%;
-}
-
-#midsectiondiv{
-    margin-left: 40%;
-    margin-top: -30%;
-    color: rgb(141, 141, 137);
-}
-#midsectiondiv p{
-    margin: 3%;
-}
-#midp1{
-    color: black;
-    font-size: large;
-    font-weight: bold;
-    /* margin-bottom: 10px; */
-}
-#midp2{
-    height: 150;
-    width: 400px;
-    font-size: medium;
-}
-
-/* styling why lend frim section  */
-.why-lendFrim{
-    /* background-color: rgba(17, 69, 165, 0.726);  */
-    background:linear-gradient(45deg,rgb(2, 30, 122),rgb(22, 160, 214));
-    height: 300px;
-    color: white;
-}
-.why-lendFrim .material-icons{
-    font-size: 50px;
-    color:aqua;
-}
-.why-lendFrim ul{
-    list-style: none;
-    display: flex;
-    text-align: center;
-    padding-bottom: 50px;
-}
-.why-lendFrim ul li {
-        margin: 3% 0px 0px 10%;
-    }
-#why-lendFrimpragraph{
-    padding-top: 5%;
-    margin-left: 43%;
-    font-weight: bold;
-    font-size: large;
-    color: white;
+/* stayling firstdiv */
+.firstdiv {
+    height: 400px;
+    max-width: 100%;
+    background-image: url(contact.jfif);
+    background-repeat: repeat;
+    background-size: contain;
 }
 
 /* styling middiv */
 .middiv{
-    height: 200px;
-    background:linear-gradient(45deg,rgb(1, 98, 136),rgb(46, 96, 235));
-    color: white;
-    padding-bottom: 50px;
-    
-}
-.middiv p{
-    margin-top: -5%;
-    margin-left: 40%;
-}
-#img{
-    display: inline;
-    width: 100px;
-    height: 50px;
-    margin-left: 30%;
+    display: flex;
+    margin-left: 20%;
     margin-top: 5%;
 }
-#p2{
-    margin-top: 1%;
-    background-color: rgb(22, 160, 214);
-    width: 100px;
+#middiv1{
+    width: 40%;
+}
+#middiv2{
+    margin-left: 10%;
+    width: 40%;
+}
+#middiv2 h1{
+    margin-top: 5%;
+}
+#middiv2 p{
+    margin-top: 5%;
+    font-size: large;
+    color: rgba(105, 107, 109, 0.884);
+}
+#middiv1 input{
+    width: 100%;
+    height: 40px;
+    margin-top: 2%;
     border-radius: 5px;
-    text-align: center;
+    border: 1px solid #ccc;
+    outline-style: none;
+}
+.middiv textarea {
+    width: 100%;
+    height: 300px;
+    margin-top: 5%;
+    border-radius: 5px;
+    resize: none;
+}
+.middiv button{
+    width: 40%;
+    height: 30px;
+    color: white;
+    background-color: blue;
+    border-radius: 5px;
+}
+#middiv2 #p1{
+    color: blue;
+}
+#middiv2 .material-icons{
+    color: rgb(0, 153, 255);
+    font-size: larger;
+    margin-right: 2%;
 }
 
 /* styling the last div */
 .lastdiv{
     height: 400px;
-    background-color: white;
-    padding-top: 2%;
 }
 .lastdiv .p1{
-    margin-left: 43%;
+    margin-left: 45%;
     font-size: larger;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 2%;
+    margin-top: 20px;
 }
 .lastdiv ul{
     display: flex;
     list-style: none;
     font-size: large;
-    margin-left: 5%;
 }
 .lastdiv ul li{
-    margin-top: 4%;
-    margin-left: 7%;
+    margin-top: 30px;
+    margin-left: 8%;
     background:linear-gradient(45deg,rgb(1, 98, 136),rgb(141, 140, 137));
     padding: 10px;
     border-radius: 10px;
@@ -270,8 +181,8 @@ nav img{
     font-size: medium;
 }
 .lastdiv .div{
-    margin-top: 3%;
-    margin-left: 1%;
+    margin-top: 5%;
+    margin-left: 8%;
     text-align: center;
 }
 .div .p{
@@ -283,6 +194,7 @@ nav img{
     margin-top: 2%;
     color: white;
 }
+
 
 
 /* styling the footer */
@@ -312,7 +224,7 @@ footer ul{
     
 }
 footer ul li{
-    margin-left: 8%;
+    margin-left: 2%;
     
 }
 footer ul li a{
@@ -343,10 +255,3 @@ footer ul li p{
     color: rgb(141, 140, 137);
     
 }
-
-
-
-
-
-
-
